# minesweeper

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Makefile  minesweeper
include/: color.h  debug.h  defines.h  minesweeper.h  structs.h  text.h  ui.h  utils.h
include/logger/: logger.h
include/ui/: button.h  gradient.h  ui.decl.h
lib/sdl2_ttf/lib/: libSDL2_ttf-2.0.0.dylib
lib/sdl2_ttf/lib/pkgconfig/: SDL2_ttf.pc
src/: draw.c  generate_tile_numbers.c  loop.c  main.c  utils.c
src/debug/: print_field.c
src/game/: events.c  init_game.c  map.c
src/generators/: generate_tile_numbers.c
src/initialization/: borders_utils.h  init_borders.c  init_freetype.c  init_game.c  init_header.c  init_sprites.c  initialization.c
src/logger/: logger.c  print_field.c
src/text/: render.c  text.c
src/ui/: btn_runtime.c  button.c  button.h  gradient.c  mouse_evt.c  mouse_evt.h
src/utils/: initialization.c  utils.c
